# fcitx-matchbox-keyboard-toggler

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  fcitx-matchbox-keyboard-toggler.conf.in  matchbox-keyboard-toggler.c
